@@ -9,42 +9,26 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
 
 public class StateMachine {
 
 	private State currentState;
 	private State initialState;
-	private List<State> states = new ArrayList<>();
+	private final List<State> states = new ArrayList<>();
 	private String event;
-	private Map<String, Integer> variables = new HashMap<>();
-
-	Logger logger = Logger.getLogger(StateMachine.class.getName());
+	private final Map<String, Integer> variables = new HashMap<>();
 
 	public Machine build() {
 		return new Machine(new ArrayList<>(states), initialState, variables);
-	}
-
-	public void transition(State newState) {
-		if (currentState == null) {
-			System.out.println("Current state is null, cannot transition.");
-			return;
-		}
-		currentState = newState;
-		System.out.println("Transitioned to: " + newState.getName());
 	}
 
 	public StateMachine state(String name) {
 		State existing = findStateByName(name);
 		if (existing != null) {
 			currentState = existing;
-			logger.info("State exists: " + currentState.getName());
 		} else {
-			logger.info("Creating state: " + name);
 			currentState = new State(name);
-			logger.info("State created: " + currentState.getName());
 			states.add(currentState);
-			logger.info("State added to list: " + currentState.getName());
 		}
 		return this;
 	}
@@ -52,7 +36,6 @@ public class StateMachine {
 	public StateMachine initial() {
 		if (currentState != null) {
 			initialState = currentState;
-			logger.info("Setting initial state: " + initialState.getName());
 		}
 		return this;
 	}
@@ -66,7 +49,6 @@ public class StateMachine {
 		// If target state doesn't exist, create a placeholder.
 		State targetState = findStateByName(targetStateName);
 		if (targetState == null) {
-			logger.info("Target state not found: " + targetStateName + ". Creating placeholder.");
 			targetState = new State(targetStateName);
 			states.add(targetState);
 		}
@@ -90,7 +72,6 @@ public class StateMachine {
 
 	public StateMachine integer(String varName) {
 		variables.put(varName, 0);
-		logger.info("Initializing variable " + varName + " to: " + variables.get(varName));
 		return this;
 	}
 
@@ -100,10 +81,9 @@ public class StateMachine {
 		}
 		// If setting on a transition, delegate to the last transition
 		if (currentState != null && !currentState.getTransitions().isEmpty()) {
-			Transition last = currentState.getTransitions().get(currentState.getTransitions().size() - 1);
+			Transition last = currentState.getTransitions().getLast();
 			last.setSetOperation(varName, value);
 		}
-		logger.info("Setting variable " + varName + " to: " + variables.get(varName));
 		return this;
 	}
 
@@ -112,10 +92,9 @@ public class StateMachine {
 			variables.put(varName, variables.get(varName) + 1);
 		}
 		if (currentState != null && !currentState.getTransitions().isEmpty()) {
-			Transition last = currentState.getTransitions().get(currentState.getTransitions().size() - 1);
+			Transition last = currentState.getTransitions().getLast();
 			last.setIncrementOperation(varName);
 		}
-		logger.info("Incrementing variable " + varName + " to: " + variables.get(varName));
 		return this;
 	}
 
@@ -124,31 +103,27 @@ public class StateMachine {
 			variables.put(varName, variables.get(varName) - 1);
 		}
 		if (currentState != null && !currentState.getTransitions().isEmpty()) {
-			Transition last = currentState.getTransitions().get(currentState.getTransitions().size() - 1);
+			Transition last = currentState.getTransitions().getLast();
 			last.setDecrementOperation(varName);
 		}
-		logger.info("Decrementing variable " + varName + " to: " + variables.get(varName));
 		return this;
 	}
 
 	public StateMachine ifEquals(String varName, int value) {
-		Transition last = currentState.getTransitions().get(currentState.getTransitions().size() - 1);
+		Transition last = currentState.getTransitions().getLast();
 		last.setConditionEquals(varName, value);
-		logger.info("Adding condition: " + varName + "=" + value);
 		return this;
 	}
 
 	public StateMachine ifLessThan(String varName, int value) {
-		Transition last = currentState.getTransitions().get(currentState.getTransitions().size() - 1);
+		Transition last = currentState.getTransitions().getLast();
 		last.setConditionLessThan(varName, value);
-		logger.info("Adding condition: " + varName + "<" + value);
 		return this;
 	}
 
 	public StateMachine ifGreaterThan(String varName, int value) {
-		Transition last = currentState.getTransitions().get(currentState.getTransitions().size() - 1);
+		Transition last = currentState.getTransitions().getLast();
 		last.setConditionGreaterThan(varName, value);
-		logger.info("Adding condition: " + varName + ">" + value);
 		return this;
 	}
 }
